--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
     </header>
     <main>
-        <section>
+        <section id="koczkas">
             <div class="koczka_element">
                 <h2>Koczka István</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores ullam ea sint assumenda suscipit
