--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </main>
     <footer>
         <div id="footer_bar">
-            <h1>CP 2023</h1>
+            <h1>© 2023 - PetrikDevs</h1>
         </div>
     </footer>
 </body>
